Remove setSecurityManager and revived functional tests